# franka-panda-gazebo-moveit

./: .gitignore  README.md  generated_panda.urdf  project_structure.txt  robot_description_active.urdf  robot_model.urdf  ros_control_moveit_controller_manager.launch.xml
config_overrides/moveit_resources_panda_moveit_config/config/: kinematics.yaml
src/my_franka_gazebo/: CMakeLists.txt  package.xml
src/my_franka_gazebo/launch/: panda_gazebo.launch
src/my_panda_gripper_control/: CMakeLists.txt  package.xml
src/my_panda_gripper_control/config/: panda_effort_controllers.yaml
src/my_panda_gripper_control/launch/: panda_gazebo.launch
src/my_panda_gripper_control/scripts/: gripper_control_example.py
src/my_panda_simulation/: CMakeLists.txt  package.xml
src/my_panda_simulation/launch/: full_simulation.launch  loaded_robot_description.urdf
src/my_robot_controller/: CMakeLists.txt  package.xml
src/my_robot_controller/scripts/: move_arm_joint_goal.py
src/panda_description/: CMakeLists.txt  package.xml
src/panda_description/launch/: display.launch
src/panda_description/rviz/: panda_display.rviz
src/panda_description/urdf/: panda.urdf
src/panda_moveit_tutorial_launch/: CMakeLists.txt  package.xml
src/panda_moveit_tutorial_launch/launch/: my_panda_demo.launch
